feat(git): replace diff-so-fancy with delta and add tmux lazygit popup
- Switch from diff-so-fancy to delta for git diff/show paging
- Configure delta with side-by-side diffs and line numbers
- Update lazygit config to use delta for paging
- Remove lazycommit integration
- Add tmux keybinding (Ctrl-g) to open lazygit in a popup
- Increase ghostty background opacity from 0.8 to 0.9

--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -32,21 +32,20 @@
   required = true
   clean = git-lfs clean -- %f
   smudge = git-lfs smudge -- %f
-[pager]
-  diff = diff-so-fancy | less --tabs=1,5 -RFX
-  show = diff-so-fancy | less --tabs=1,5 -RFX
-[color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 22
-[color "diff"]
-	meta = yellow
-	frag = magenta bold
-	commit = yellow bold
-	old = red bold
-	new = green bold
-	whitespace = red reverse
+[core]
+    pager = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    navigate = true    # use n and N to move between diff sections
+    light = false      # set to true if you're in a terminal with a light background color (e.g. the default macOS terminal)
+    side-by-side = true
+    line-numbers = true
+
+[merge]
+    conflictstyle = diff3
 [diff]
   colorMoved = zebra
 [push]
